--- a/proyecto9Angular/src/app/components/intro-valuation/intro-valuation.component.html
+++ b/proyecto9Angular/src/app/components/intro-valuation/intro-valuation.component.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 </form> -->
-
+<h3>Introduce tu Valoración</h3>
 <form role="form" method="post" action="#" *ngIf="(ValueDone) ">
     <div class="row">
 
