--- a/proyecto9Angular/src/app/components/new-login/new-login.component.html
+++ b/proyecto9Angular/src/app/components/new-login/new-login.component.html
@@ -127,14 +127,13 @@
                             <div class="form-group">
                                 <label for="Pais" class="col-sm-3 control-label">Pais</label>
                                 <div class="col-sm-9">
-                                    <input (keyup)="getCountryByLetter(country.value)" #country type="text" class="form-control" id="inputPhone">
+                                    <input #country type="text" class="form-control" id="inputPhone">
 
                                 </div>
                             </div>
 
 
 
-                            <app-autocomplete></app-autocomplete>
 
 
 
