--- a/proyecto9Angular/src/app/components/values-user/values-user.component.html
+++ b/proyecto9Angular/src/app/components/values-user/values-user.component.html
@@ -1,7 +1,7 @@
 <section class="m-t-40">
     <div class="second-page-header dark">
         <div class="container">
-            <h2>Mis Reseñas</h2>
+            <h2>Listado de reseñas</h2>
 
         </div>
     </div>
@@ -14,7 +14,7 @@
                 <div class="col-xs-19 col-sm-4 col-md-4 col-lg-3 text-center">
                     <figure class="figure-hover-overlay">
                         <a href="#" class="figure-href"></a>
-                        <img class="img-overlay img-responsive" src="http://placehold.it/800x1000" alt="" title="">
+                        <img class="img-overlay img-responsive" [src]="'../../../assets/imgProducts/'+ item.photo" alt="" title="">
                         <img class="img-responsive" src="http://placehold.it/800x1000" alt="" title="">
                     </figure>
                 </div>
