--- a/proyecto9Angular/src/app/components/autocomplete/autocomplete.component.html
+++ b/proyecto9Angular/src/app/components/autocomplete/autocomplete.component.html
@@ -1,5 +1,5 @@
-<h3>Advanced</h3>
-<p-autoComplete [(ngModel)]="brand" [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" (keyup)="getCpuntries()" [size]=" 30 " [minLength]="1 " placeholder="Hint: type 'v' or 'f' " [dropdown]="true ">
+<!-- <h3>Advanced</h3>
+<p-autoComplete [(ngModel)]="brand" [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" (keyup)="getCountries(letter.value,null)" #letter [size]=" 30 " [minLength]="1 " placeholder="Hint: type 'v' or 'f' " [dropdown]="true ">
     <ng-template let-brand pTemplate="item ">
         <div class="ui-helper-clearfix " style="border-bottom:1px solid #D5D5D5 ">
 
@@ -7,4 +7,4 @@
         </div>
     </ng-template>
 </p-autoComplete>
-<span style="margin-left:50px ">Brand: {{brand||'none'}}</span>
+<span style="margin-left:50px ">Brand: {{brand||'none'}}</span> -->
