--- a/proyecto9Angular/src/app/components/single-product/single-product.component.html
+++ b/proyecto9Angular/src/app/components/single-product/single-product.component.html
@@ -1,3 +1,108 @@
+<!-- <section class="m-t-40">
+    <div class="second-page-header dark">
+        <div class="container">
+            <h2>Producto</h2>
+
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="block2">
+        <div class="container">
+            <div class="block-product-detail">
+                <div class="row">
+
+
+
+
+                    <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="product-image">
+                            <img id="product-zoom" src='http://placehold.it/750x938' data-zoom-image="http://placehold.it/1000x1333" alt="">
+                            <div id="gal1">
+
+                                <a href="javascript:;" data-image="http://placehold.it/750x938" data-zoom-image="http://placehold.it/1000x1333">
+                                    <img src="http://placehold.it/65x85" alt="">
+                                </a>
+
+                                <a href="javascript:;" data-image="http://placehold.it/750x938" data-zoom-image="http://placehold.it/1000x1333">
+                                    <img src="http://placehold.it/65x85" alt="">
+                                </a>
+
+                                <a href="javascript:;" data-image="http://placehold.it/750x938" data-zoom-image="http://placehold.it/1000x1333">
+                                    <img src="http://placehold.it/65x85" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="product-detail-section">
+                        <h3>{{Product.nameProduct}}</h3>
+                        <div class="product-rating">
+                            <div class="stars">
+                                <span [class.active]="Product.valueAVG>4" class="star "></span><span [class.active]="Product.valueAVG>3" class="star  "></span><span [class.active]="Product.valueAVG>2" class="star  "></span><span [class.active]="Product.valueAVG>1"
+                                    class="star  "></span><span [class.active]="Product.valueAVG>0" class="star  "></span>
+                            </div>
+
+                            <a href="" class="review">10 Reviews</a>
+                        </div>
+
+                        <div class="product-information">
+                            <div class="clearfix">
+                                <label class="pull-left">Tipo de actividad:</label> <a href="#">{{Product.nameCategory}}</a><br>
+                            </div>
+
+                            <div class="clearfix">
+                                <label class="pull-left">Product Code:</label> {{Product.idProduct}}
+                            </div>
+                        </div>
+
+
+
+                        <div class="box-border block-form">
+
+                            {{Product.description}}
+
+
+                            <div class="tab-content">
+                                <div class="tab-pane" id="description">
+                                    <br>
+                                    <h3>Product Details</h3>
+                                    <hr>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    </p>
+                                </div>
+
+                                <div class="tab-pane active" id="review">
+                                    <br>
+                                    <div class="row">
+                                        <div class="col-md-12">
+
+                                            <hr>
+                                            <app-valuations [id]='Product.idProduct' idUser=''></app-valuations>
+
+                                        </div>
+                                    </div>
+
+                                    <app-intro-valuation [id]='Product.idProduct' *ngIf="newValue"></app-intro-valuation>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section> -->
+
+
+<div class="top-header-bg"></div>
 <section class="m-t-40">
     <div class="second-page-header dark">
         <div class="container">
@@ -13,9 +118,22 @@
             <div class="block-product-detail">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                        <div>
-                            <img [src]="imgUrl" alt="">
+                        <div class="product-image">
+                            <img id="product-zoom" [src]="'assets/imgProducts/'+ Product.photo" data-zoom-image="http://placehold.it/1000x1333" alt="">
+                            <!-- <div id="gal1">
 
+                                <a href="javascript:;" data-image="http://placehold.it/750x938">
+                                    <img [src]="'../../../assets/imgProducts/'+ Product.photo" alt="">
+                                </a>
+
+                                <a href="javascript:;" data-image="http://placehold.it/750x938" data-zoom-image="http://placehold.it/1000x1333">
+                                    <img src="http://placehold.it/65x85" alt="">
+                                </a>
+
+                                <a href="javascript:;" data-image="http://placehold.it/750x938" data-zoom-image="http://placehold.it/1000x1333">
+                                    <img src="http://placehold.it/65x85" alt="">
+                                </a>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
@@ -24,19 +142,32 @@
                         <div class="product-detail-section">
                             <h3>{{Product.nameProduct}}</h3>
                             <div class="product-rating">
+
+
                                 <div class="stars">
                                     <span [class.active]="Product.valueAVG>4" class="star "></span><span [class.active]="Product.valueAVG>3" class="star  "></span><span [class.active]="Product.valueAVG>2" class="star  "></span><span [class.active]="Product.valueAVG>1"
                                         class="star  "></span><span [class.active]="Product.valueAVG>0" class="star  "></span>
                                 </div>
 
-                                <a href="" class="review">10 Reviews</a>
+
+                                <a href="" class="review">{{numberValues}} Reviews</a>
                             </div>
 
+                            <div class="product-information">
+                                <div class="clearfix">
+                                    <label class="pull-left">Tipo de actividad:</label> <a href="#">{{Product.nameCategory}}</a><br>
+                                </div>
 
+                                <div class="clearfix">
+                                    <label class="pull-left">Cogiod del Producto:</label> {{Product.idProduct}}
+                                </div>
+                            </div>
 
                             <div class="box-border block-form">
                                 <!-- Nav tabs -->
+
                                 {{Product.description}}
+
 
                                 <!-- Tab panes -->
                                 <div class="tab-content">
@@ -52,20 +183,14 @@
 
                                     <div class="tab-pane active" id="review">
                                         <br>
-                                        <div class="row">
-                                            <div class="col-md-12">
-
-                                                <hr>
-                                                <app-valuations [id]='Product.idProduct'></app-valuations>
-
-                                            </div>
-                                        </div>
-
-                                        <app-intro-valuation [id]='Product.idProduct' *ngIf="newValue"></app-intro-valuation>
+                                        <app-valuations [id]='Product.idProduct' idUser=''></app-valuations>
 
                                     </div>
 
                                 </div>
+
+
+                                <app-intro-valuation [id]='Product.idProduct' *ngIf="newValue"></app-intro-valuation>
 
                             </div>
                         </div>
